# vpnShop

./: .env.example  .gitignore  DOCKER_SETUP.md  Dockerfile  README.md  docker-compose.yml  plans.json  pyproject.toml
app/: __main__.py  config.py
app/bot/: __init__.py
app/bot/fsm/: __init__.py  states.py  storage.py
app/bot/max_api/: __init__.py  bot.py  dispatcher.py  types.py
app/bot/models/: __init__.py  services_container.py  subscription_data.py
app/bot/payment_gateways/: _gateway.py  yookassa.py  yoomoney.py
app/bot/routers/admin_tools/: payment_approval.py
app/bot/routers/main_menu/: handler.py
app/bot/routers/profile/: handler.py
app/bot/routers/referral/: handler.py
app/bot/routers/subscription/: receipt_handler.py  subscription_handler.py
app/bot/routers/support/: handler.py
app/bot/services/: __init__.py  coupon.py  notification.py  sber_payment.py  vpn.py
app/bot/utils/: constants.py
app/db/: alembic.ini
app/db/models/: __init__.py  corporate_server.py  coupon.py  manual_payment.py  payment.py  referral.py  server.py  user.py
mdFiles/: CURRENT_ARCHITECTURE.md  IMPLEMENTATION_PLAN.md  LAUNCH_INSTRUCTIONS.md  MVP_COMPLETE.md  MVP_SBER_PAYMENT_PLAN.md  PROGRESS_STATUS.md  READ.md  TODO_BEFORE_LAUNCH.md
